--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,23 +5,18 @@ on:
     branches:
       - main
 
-env:
-  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-
 jobs:
-  job_id:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-    - name: 'Deploy to Cloud Run'
-      uses: 'google-github-actions/deploy-cloudrun@v0'
+    - name: Deploy to Cloud Run
+      id: deploy
+      uses: google-github-actions/deploy-cloudrun@v0
       with:
-        image: 'gcr.io/cloudrun/hello'
-        service: 'hello-cloud-run'
+        image: gcr.io/cloudrun/hello
+        service: hello-cloud-run
+        credentials: ${{ secrets.GCP_SA_KEY }}
 
-    - name: 'Use output'
+    - name: Show Output
       run: echo ${{ steps.deploy.outputs.url }}
